# prettify

./: Main.hs  PutJSON.hs  README.md  TODO.md  prettify.cabal  simple  simpleJSON.hs
src/: JSONClass.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs
